feat(back): handling more import use cases
